# virtual-electrical-designer-simulator

./: .gitignore  FIX_SUMMARY.md  README.md  VALIDATION_REPORT.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
data/exports/: .gitkeep
data/libraries/: analog_ics.json  analog_ics_extended.json  cables.json  capacitors.json  connectors.json  digital_ics.json  digital_ics_extended.json  diodes.json  electromechanical.json  inductors.json  library_index.json  library_index_extended.json  output_devices.json  passive_advanced.json  passive_advanced_extended.json  power_distribution.json  power_semiconductors.json  power_semiconductors_extended.json  resistors.json  rf_components.json  semiconductors.json  sensors.json  sources.json  switches.json  transformers.json  transistors.json
data/projects/: .gitkeep
src/: __init__.py
src/backend/: __init__.py
src/backend/ai_helper/: __init__.py  ai_helper.py
src/backend/circuit/: __init__.py  circuit_analyzer.py  circuit_model.py  circuit_validator.py  component_library.py  project_manager.py
src/backend/design_wizards/: __init__.py  design_engines.py
src/backend/power_systems/: __init__.py  power_system_engine.py
src/backend/reporting/: __init__.py  report_generator.py
src/backend/scripting/: __init__.py  script_engine.py  script_runtime.py
src/backend/simulation/: __init__.py  simulation_engine.py
src/frontend/: __init__.py  main.py
src/frontend/config/: __init__.py  constants.py  (+1 more)
tests/: __init__.py  test_circuit_model.py  test_integration.py  test_simulation.py
(+38 files in other folders)
