[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-electrical-designer"
version = "0.1.0"
description = "A comprehensive desktop application for designing and simulating electrical circuits"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "PySide6>=6.6.1",
    "pyqtgraph>=0.13.7",
    "numpy>=1.24.3",
    "scipy>=1.11.1",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "networkx>=3.2",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "pylint>=2.17",
]

[project.scripts]
ved = "frontend.main:main"

[tool.setuptools.packages.find]
where = ["src"]
